# pms

./: .bzrignore  .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  PMS.sln  README  TODO  autogen.sh  configure.ac  configure.in
PMS/: Makefile  Makefile.am  PMS.csproj  dll.config
PMS.Config/: Makefile.am  Program.cs
PMS.Data.MSSQL/: Makefile.am  PMS.Data.MSSQL.csproj
PMS.Data.Pgsql/: Makefile.am  PMS.Data.Pgsql.csproj
PMS.Data.Pgsql/PMS.Data.Pgsql/: PostgresqlConnection.cs  PostgresqlInspector.cs  PostgresqlProvider.cs
PMS.Data.Pgsql/Properties/: AssemblyInfo.cs
PMS.Data.Sqlite/: Makefile.am  PMS.Data.Sqlite.csproj
PMS.Data.Sqlite/PMS.Data.Sqlite/: SqliteConnection.cs  SqliteInspector.cs  SqliteProvider.cs
PMS.Data.Sqlite/Properties/: AssemblyInfo.cs
PMS.Driver.MSSQL/: Makefile.am  PMS.Driver.MSSQL.csproj
PMS.Driver.Pgsql/: Makefile.am  PMS.Driver.Pgsql.csproj
PMS.Driver.Sqlite/: Makefile.am  PMS.Driver.Sqlite.csproj
PMS.NUnit/: Makefile  (+2 more)
PMS.Repo/: Makefile.am
PMS/PMS/: Config.cs  DbType.cs  Logger.cs
PMS/PMS.Broker/: DbBroker.cs  IPersistenceBroker.cs  PersistenceBroker.cs  PersistenceBrokerFactory.cs
PMS/PMS.Collections.Pool/: AbstractObjectPool.cs  ForeignObjectException.cs  IObjectPool.cs  ItemCollection.cs  ManagedObjectPool.cs  ObjectNotCheckedOutException.cs  ObjectNotInPoolException.cs  ObjectPool.cs  ObjectPoolEmptyException.cs  PoolEmptyException.cs  PoolFullException.cs  PrincipalObjectPool.cs
PMS/PMS.Config/: Handler.cs  ProviderElement.cs  ProviderElementList.cs  Sections.cs
PMS/PMS.Data/: AbstractProvider.cs  AccessMode.cs  DbCommandProxy.cs  DbConnectionProxy.cs  DbDataReaderProxy.cs  DbExecutor.cs  DbManager.cs  DbManagerFactory.cs  DbResult.cs  IDbInspector.cs  IDbManager.cs  IProvider.cs  ProviderDefaultException.cs  ProviderFactory.cs  ProviderNotFoundException.cs
PMS/PMS.Data.Pgsql/: PostgreSqlInspector.cs  PostgreSqlProvider.cs
PMS/PMS.Data.Pool/: ConnectionPool.cs  IConnectionPool.cs
PMS/PMS.DataAccess/: AccessMode.cs  DbEngine.cs  DbEngineNotStartedException.cs  IDbManager.cs  SingleDbManager.cs
PMS/PMS.IO/: FileLock.cs
PMS/PMS.Metadata/: AssemblyCollection.cs  Auto.cs  Class.cs  ClassCollection.cs  ClassNotFoundException.cs  ClassRef.cs  Collection.cs  Connection.cs  ConnectionCollection.cs  Field.cs  FieldCollection.cs  FieldNotFoundException.cs  Generator.cs  MetaObject.cs  MetaObjectEnumerator.cs  Reference.cs  Repository.cs  RepositoryDefinitionException.cs  RepositoryException.cs  RepositoryManager.cs  RepositoryManagerFactory.cs  RepositoryNotFoundException.cs
PMS/PMS.Metadata.Generic/: MetaObject.cs
PMS/PMS.Query/: AbstractQuery.cs  AndClause.cs  BetweenClause.cs  CreateParameterDelegate.cs  Criteria.cs  EqualToClause.cs  GreaterOrEqualToClause.cs  GreaterThanClause.cs  IClause.cs  IQuery.cs  InClause.cs  IsNotNullClause.cs  IsNullClause.cs  LessOrEqualToClause.cs  LessThanClause.cs  LikeClause.cs  NotBetweenClause.cs  NotEqualToClause.cs  NotInClause.cs  NotLikeClause.cs  OrClause.cs  Query.cs  QueryByCriteria.cs  QueryByObject.cs  QueryByObjectDiff.cs  QueryBySql.cs  QueryByType.cs  QueryCallback.cs  QueryCriteria.cs  QueryException.cs  QueryFactory.cs  RangeClause.cs  RawClause.cs  SqlCommand.cs  ValueClause.cs
PMS/PMS.Util/: TypeBinder.cs  TypeComparer.cs  TypeLoader.cs
PMS/Properties/: AssemblyInfo.cs  AssemblyInfo.cs.in
doc/: Makefile.am  pms-lib.sources  pms.source
doc/api/: PMS.Broker.xml  PMS.Collections.Pool.xml  PMS.Config.xml  PMS.Data.xml  PMS.DataAccess.xml  PMS.IO.xml  PMS.Metadata.xml  PMS.Query.xml  PMS.Util.xml  PMS.xml  index.xml
doc/api/PMS/: Config.xml  DbType.xml  Log.xml  LogLevel.xml
doc/api/PMS.Broker/: DbBroker.xml  IPersistenceBroker.xml  PersistenceBroker.xml  PersistenceBrokerFactory.xml
doc/api/PMS.Collections.Pool/: Item.xml  ItemCollection.xml  ManagedObjectPool.xml  ManagedObjectPool`1.xml  ObjectNotCheckedOutException.xml  ObjectNotInPoolException.xml  ObjectPool.xml  ObjectPoolEmptyException.xml  PrincipalObjectPool.xml
doc/api/PMS.Config/: Handler.xml  ProviderElement.xml  ProviderElementList.xml  Section.xml
doc/api/PMS.Data/: AbstractProvider.xml  DbCommandProxy.xml  DbConnectionProxy.xml  DbDataReaderProxy.xml  DbExecutor`1.xml  DbManagerFactory.xml  DbResult.xml  IDbInspector.xml  IProvider.xml  ProviderDefaultException.xml  ProviderFactory.xml  ProviderNotFoundException.xml
doc/api/PMS.DataAccess/: AccessMode.xml  DbEngine.xml  DbEngineNotStartedException.xml  IDbManager.xml
doc/api/PMS.IO/: FileLock.xml
doc/api/PMS.Metadata/: AssemblyCollection.xml  Auto.xml  Class.xml  ClassCollection.xml  ClassNotFoundException.xml  Connection.xml  ConnectionCollection.xml  DbManagerMode.xml  Field.xml  FieldCollection.xml  FieldNotFoundException.xml  MetaObjectEnumerator`1.xml  Reference.xml  Repository.xml  RepositoryDefinitionException.xml  RepositoryException.xml  RepositoryManager.xml  RepositoryNotFoundException.xml
doc/api/PMS.Query/: AbstractQuery.xml  AndClause.xml  BetweenClause.xml  CreateParameterDelegate.xml  Criteria.xml  EqualToClause.xml  GreaterOrEqualToClause.xml  GreaterThanClause.xml  IClause.xml  IQuery.xml  InClause.xml  IsNotNullClause.xml  IsNullClause.xml  LessOrEqualToClause.xml  LessThanClause.xml  LikeClause.xml  NotBetweenClause.xml  NotEqualToClause.xml  NotInClause.xml  NotLikeClause.xml  OrClause.xml  QueryByCriteria.xml  QueryByObject.xml  QueryBySql.xml  QueryByType.xml  QueryCallback`1.xml  QueryException.xml  Query`1+QueryGroupDelegate.xml  Query`1.xml  RangeClause.xml  SqlCommand.xml  ValueClause.xml
doc/api/PMS.Util/: TypeComparer.xml  TypeLoader.xml
doc/man/: Makefile.am  pms-monodoc.1  pms-providers.1  pms-repo-upgrade.1  pms2-monodoc.1  pms2-providers.1  pms2-repo-split.1  pms2-repo-upgrade.1
doc/mdoc/: Makefile.am  pms2.source
extra/: Makefile.am  policy.config.in
pms-providers/: Makefile.am  Program.cs
pms-providers/Properties/: AssemblyInfo.cs
policy/: Makefile.am  policy.0.6.PMS.config  policy.0.7.PMS.config  policy.1.9.PMS.config  policy.2.0.PMS.config  policy.config.in
(+153 files in other folders)
