AC_INIT(README)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(PMS, 0.6.37.1)
AM_MAINTAINER_MODE

AC_PROG_INSTALL
pmsdir=$libdir/mono/2.0
AC_SUBST(pmsdir)

dnl pkg-config
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR([You need to install pkg-config])
fi

dnl C# compiler
AC_PATH_PROG(CSC, csc, no)
AC_PATH_PROG(MCS, gmcs, no)
AC_PATH_PROG(MONO, mono, no)
AC_PATH_PROG(GACUTIL, gacutil, no)

CS="C#"
if test "x$CSC" = "xno" -a "x$MCS" = "xno"  ; then
	dnl AC_MSG_ERROR([You need to install a C# compiler])
	AC_MSG_ERROR([No $CS compiler found])
fi

if test "x$MCS" = "xno" ; then
	MCS=$CSC
fi

if test "x$MONO" = "xno"; then
	AC_MSG_ERROR([No mono runtime found])
fi

GACUTIL_FLAGS='-root $(DESTDIR)/usr/lib'

AC_SUBST(MCS)
AC_SUBST(MONO)
AC_SUBST(GACUTIL)
AC_SUBST(GACUTIL_FLAGS)

AC_OUTPUT([
			  Makefile
			  PMS/Makefile
			  build/libpms.pc
			  build/Makefile
			  debian/Makefile
])
