AC_INIT(README)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(libpms, 0.6)
AM_MAINTAINER_MODE

AC_PROG_INSTALL

AC_PATH_PROG(AL, al, no)
AC_PATH_PROG(CSC, csc, no)
AC_PATH_PROG(MCS, gmcs, no)
AC_PATH_PROG(MONO, mono, no)
AC_PATH_PROG(GACUTIL, gacutil, no)
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)

if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR([You need to install pkg-config])
fi

if test "x$CSC" = "xno" -a "x$MCS" = "xno"  ; then
	dnl AC_MSG_ERROR([You need to install a C# compiler])
	AC_MSG_ERROR([No csharp compiler found])
fi

if test "x$MCS" = "xno" ; then
	MCS=$CSC
fi

if test "x$MONO" = "xno"; then
	AC_MSG_ERROR([No mono runtime found])
fi

AC_ARG_WITH([log4net],
	[  --with-log4net=<pkg name>   Override default log4net package], 
	[], 
	[with_log4net=log4net]
)
AC_SUBST([PKGLOG4NET], [$with_log4net])

AC_ARG_ENABLE([debug],
	[  --enable-debug   Create debug files (.mdb)], 
	if test "x$enable_debug" = "xyes"; then
		DEBUG_FLAGS='-debug'
	fi
)


AC_SUBST(AL)
AC_SUBST(MCS)
AC_SUBST(MONO)
AC_SUBST(GACUTIL)
AC_SUBST(PKG_CONFIG)
AC_SUBST(DEBUG_FLAGS)
AC_SUBST([pmsdir], $libdir/cli/libpms-0.6)
AC_SUBST([GACUTIL_FLAGS], ['-root $(DESTDIR)/usr/lib'])


AC_MSG_CHECKING(for log4net >= 1.2)
if $PKG_CONFIG $PKGLOG4NET; then
	AC_MSG_RESULT($PKGLOG4NET)
else
	echo "log4net dev package is missing";
	exit 1;
fi


AC_OUTPUT([
			  Makefile
			  PMS/Makefile
			  PMS.Data.Pgsql/Makefile
			  PMS.Data.Sqlite/Makefile
			  pms-repo/Makefile
			  build/libpms.pc
			  build/Makefile
			  scripts/Makefile
			  scripts/pms-repo
			  debian/Makefile
			  policy/Makefile
			  policy/policy.config
			  doc/Makefile
])
